fix : mx-auto mobile overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,19 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+/* html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+} */
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
